@@ -129,6 +129,10 @@ Version 1.3
    function calls (Justin)
  - Pull Request #538 and #541 - Add SwiidInter to manufacturer_specific from Nechry (Justin)
  - Pull Request #545 - Add Philio PST02-A 4 in 1 MultiSensor from Nechry (Justin)
+ - Pull Request #546 - Update Philio PST02-A Config from Nechry (Justin)
+ - Pull Request #547 & #549 - New Config File for Philio PST02-B from Nechry (Justin)
+ - Pull Request #548 - Update Config file for Philio PST02-C from Nechry (Justin)
+ - Pull Request #550 - Config File for Vision zd2102 from Ugoviti (Justin)
 
 Version 1.2 
  - Released on 15/10/14
